linked new stylesheet and script file

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
             hejsan
         </title>
         <link rel="stylesheet" href="W3.css">
+        <link rel="stylesheet" href="master.css">
+        <!-- <script type="text/javascript" src="code.js"></script> -->
+
     </head>
     <body>
-        
+        <h1>Hello World!</h1>
     </body>
 </html>
