--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
-<html>
+<!DOCTYPE html>
+<html lang="sv">
 
 <head>
-    <title>
-        hejsan
-    </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>hejsan</title>
     <link rel="stylesheet" href="W3.css">
     <link rel="stylesheet" href="master.css">
 </head>
 
 <body>
     <h1>Hello World!</h1>
-    <!-- <script type="text/javascript" src="code.js"></script> -->
+    <script type="text/javascript" src="code.js"></script>
+
 </body>
 
 </html>
