--- a/quiz.html
+++ b/quiz.html
@@ -12,6 +12,7 @@
 <body>
     <h1>Quiz</h1>
     <h2>Energi i hemmet</h2>
+
     <h3>1. Hur många procent står bostäder av den totala elanvändning i Sverige?</h3>
     <input type="radio" id="a1" name="answer1" value="a1">
     <label for="a">39%</label> <br>
@@ -27,6 +28,22 @@
     <label for="a">Nej</label> <br>
     <input type="radio" id="c2" name="answer2" value="c2">
     <label for="a">Det gör inget</label> <br>
+
+<h3>3. Hur många procent av fjärrvärmen kommer från sopor i Sverige?</h3>
+    <input type="radio" id="a3" name="answer3" value="a3">
+    <label for="a">5%</label> <br>
+    <input type="radio" id="b3" name="answer3" value="b3">
+    <label for="a">15%</label> <br>
+    <input type="radio" id="c3" name="answer3" value="c3">
+    <label for="a">20%</label> <br>
+
+    <h3>4. vem kan dina sopor skada?</h3>
+    <input type="radio" id="a4" name="answer4" value="a4">
+    <label for="a">enbart djur samt naturen</label> <br>
+    <input type="radio" id="b4" name="answer4" value="b4">
+    <label for="a">Djur, människor och naturen</label> <br>
+    <input type="radio" id="c4" name="answer4" value="c4">
+    <label for="a"> enbart Människor</label> <br>
 
 
     <br><br>
