--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
     
 <head>
-    <title>W3.CSS Template</title>
+    <title>Hållbar Utveckling - Yttersjö Kommun</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="W3.css">
-    <!-- <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>html,body,h1,h2,h3,h4,h5,h6 {
@@ -42,7 +41,6 @@
     <header class="w3-container w3-green w3-center" style="padding:32px 16px">
         <h1 id="top" class="w3-margin w3-jumbo">Hållbar Utveckling</h1>
         <p class="w3-xlarge">Yttersjö kommun</p>
-        <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Get Started</button>
     </header>
 
     <!-- Sidebar -->
@@ -64,7 +62,7 @@
         id="myOverlay"></div>
 
     <!-- Main content: shift it to the right by 250 pixels when the sidebar is visible -->
-    <div class="w3-main" style="margin-left:250px">
+    <div class="w3-main" style="margin-left:190px">
 
         <div class="w3-row w3-padding-64">
             <div class="w3-twothird w3-container">
@@ -82,7 +80,7 @@
             </div>
         </div>
 
-        <div class="w3-row">
+        <div class="w3-row w3-light-green">
             <div class="w3-twothird w3-container">
                 <h1 id="thai" class="w3-text-teal">Thai</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
@@ -114,7 +112,7 @@
             </div>
         </div>
 
-        <div class="w3-row w3-padding-64">
+        <div class="w3-row w3-padding-64 w3-light-green" >
             <div class="w3-twothird w3-container">
                 <h1 id="albin" class="w3-text-teal">Albin</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
@@ -150,7 +148,7 @@
         <div class="w3-center w3-padding-32">
             <div class="w3-bar">
 
-                <a class="w3-button w3-hover-black" href="quiz.html">Ta mig till quiz</a>
+                <a class="w3-button w3-black" href="quiz.html">Ta mig till quiz</a>
 
             </div>
         </div>
@@ -158,13 +156,9 @@
         <footer id="myFooter">
             <div class="w3-container w3-theme-l2 w3-padding-32">
                 <h4>Footer</h4>
-                <a class="w3-button w3-hover-black" href="sources.html">Källor</a>
+                <a class="w3-button w3-black" href="sources.html">Källor</a>
                 <a class="w3-button" href="#top">Top</a>
             
-            </div>
-
-            <div class="w3-container w3-theme-l1">
-                <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
             </div>
         </footer>
 
