what the commit

--- a/quiz.html
+++ b/quiz.html
@@ -64,6 +64,8 @@
 
             <br><br>
             <input type="submit" value="Rätta" onclick="checkAnswer()">
+            <!--en dialogruta som visas efter man har rättat att ens uppgifter inte kommer sparas om man backar?-->
+            <!--tips till frågorna om man inte kommer ihåg svaret till dem?-->
             <h3 id="point"></h3>
         </div>
     </div>
