--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
         <div class="w3-bar w3-theme w3-top w3-left-align w3-large">
             <a class="w3-bar-item w3-button w3-right w3-hide-large w3-hover-white w3-large w3-theme-l1"
                 href="javascript:void(0)" onclick="w3_open()"><i class="fa fa-bars"></i></a>
+
                 
-            <a href="#" class=" w3-theme-l1 ">
+            <a href="#" class="w3-theme-l1">
             <img src="logo.png" width="190" height="44" alt="logo"usemap="#logo">
             </a>
         </div>
@@ -50,11 +51,11 @@
             <i class="fa fa-remove"></i>
         </a>
         <h4 class="w3-bar-item"><b>Menu</b></h4>
-        <a class="w3-bar-item w3-button w3-hover-black" href="#summary">Sammanfattning</a>
+        <h6><a class="w3-bar-item w3-button w3-hover-black" href="#summary">Sammanfattning</a>
         <a class="w3-bar-item w3-button w3-hover-black" href="#thai">Thai</a>
         <a class="w3-bar-item w3-button w3-hover-black" href="#borhan">Borhan</a>
         <a class="w3-bar-item w3-button w3-hover-black" href="#albin">Albin</a>
-        <a class="w3-bar-item w3-button w3-hover-black" href="#joachim">Joachim</a>
+        <a class="w3-bar-item w3-button w3-hover-black" href="#joachim">Joachim</a></h6>
     </nav>
 
     <!-- Overlay effect when opening sidebar on small screens -->
