copy paste merge

--- a/quiz.html
+++ b/quiz.html
@@ -62,6 +62,22 @@
                 <input type="radio" id="c2" name="answer2" value="c2">
                 <label for="a">Det gör inget</label> <br>
 
+                <h3>3. Hur många procent av fjärrvärmen kommer från sopor i Sverige?</h3>
+                <input type="radio" id="a3" name="answer3" value="a3">
+                <label for="a">5%</label> <br>
+                <input type="radio" id="b3" name="answer3" value="b3">
+                <label for="a">15%</label> <br>
+                <input type="radio" id="c3" name="answer3" value="c3">
+                <label for="a">20%</label> <br>
+
+                <h3>4. vem kan dina sopor skada?</h3>
+                <input type="radio" id="a4" name="answer4" value="a4">
+                <label for="a">enbart djur samt naturen</label> <br>
+                <input type="radio" id="b4" name="answer4" value="b4">
+                <label for="a">Djur, människor och naturen</label> <br>
+                <input type="radio" id="c4" name="answer4" value="c4">
+                <label for="a"> enbart Människor</label> <br>
+
             <br><br>
             <input type="submit" value="Rätta" onclick="checkAnswer()">
             <!--en dialogruta som visas efter man har rättat att ens uppgifter inte kommer sparas om man backar?-->
