--- a/quiz.html
+++ b/quiz.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="master.css">
     <script src="code.js" defer></script>
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="fonts.css">
+    <link rel="stylesheet" href="font-awesome.min.css">
     <style>html,body,h1,h2,h3,h4,h5,h6 {
             font-family: "Roboto", sans-serif;
         }
