same as prevoius

--- a/sources.html
+++ b/sources.html
@@ -62,13 +62,15 @@
   <div class="w3-twothird w3-container">
       <h1 id="summary" class="w3-text-teal">Klimatsmart renovering i hemmet</h1>
 
-      <a href="https://www.scb.se/hitta-statistik/temaomraden/agenda-2030/mal-12/?showAllContentLinks=True">Hållbar konsumtion och produktion: scb</a>
+      <a href="https://www.scb.se/hitta-statistik/temaomraden/agenda-2030/mal-12/?showAllContentLinks=True">Hållbar konsumtion och produktion: SCB</a>
       <br>
-      <a href="https://www.umea.se/byggaboochmiljo/avfallochatervinning/farligtavfall/rapporteringavfarligtavfall.4.4ff54ec174f999469c622.html">Farligt avfall: Umeå</a>
+      <a href="https://www.riksbyggen.se/hallbarhet/hallbarhetsskolan/bo/renovera-hallbart/">Renovera hållbart: Umeå kommun</a>
       <br>
-      <a href="https://www.umea.se/byggaboochmiljo/bygganyttandraellerriva/forforetagochforeningar/inreandringarellerombyggnationer/renoveringochunderhall.4.27a2de8b172da059ace12ff.html">Renovering: Umeå</a>
+      <a href="https://www.umea.se/byggaboochmiljo/bygganyttandraellerriva/forforetagochforeningar/inreandringarellerombyggnationer/renoveringochunderhall.4.27a2de8b172da059ace12ff.html">Renovering och underhåll: Umeå kommun</a>
       <br>
-      <a href="https://www.umea.se/byggaboochmiljo/avfallochatervinning/materialsorteringvidrivningochrenovering.4.27a2de8b172da059ace4de.html">Sortera byggavfall rätt: Umeå</a>
+      <a href="https://www.umea.se/byggaboochmiljo/avfallochatervinning/materialsorteringvidrivningochrenovering.4.27a2de8b172da059ace4de.html">Sortera byggavfall rätt: Umeå kommun</a>
+      <br>
+      <a href="https://www.doldafel.se/begransningar/teknisk-medellivslangd/">Teknisk medellivslängd: doldafel</a>
       
       </div>
 </div>
