added paragrafs to Hållbart resande

--- a/index.html
+++ b/index.html
@@ -172,15 +172,22 @@
         <div id="joachim" class="w3-row w3-padding-64">
             <div class="w3-twothird w3-container">
                 <h1  class="w3-text-teal">Hållbart Resande</h1>
-                <p>Det finns en hel del vi kan göra med vårt resande för att minska våra utsläpp och bidra till en hållbar utveckling för samhället. 
-                    Har man mindre än 5 km till jobbet eller skolan så kan man välja att ta bussen eller cykla.
-                    Vid resor som är mer är 5 km kan det fortfarande gå bra för den som är van vid att cykla att fortsätta göra det. 
-                    Om bussförbindelsen är bra så är det självklart också ett bra alternativ. Vill man däremot spara lite tid så kan man välja att att bilen 
-                    vid denna reslängd. Även om det låter lite motsägelsefullt till en början så finns det mycket man kan göra för att förbättra hållbarheten 
-                    och minska utsläppen från biltrafiken. Man kan börja med en bil som har en låg bränsleförbrukning, en medelstor bil antas släppa ut cirka 2 kg 
-                    växthusgaser per mil. Det bidrar till att man spara pengar i det långa loppet samt påverkar det inte miljön lika hårt. Dessutom kan man samåka med 
-                    flera personer som antingen bor eller jobbar på ungefär samma plats, då blir det snabbt mycket lägre utsläpp och billigare för var person som väljer 
-                    att samåka. Dessutom bidrar det till mindre trafik på vägarna, därför minskar också slitaget på asfalten och utsläppet från stillastående trafik vid köer.
+                <p>Det finns en hel del vi kan göra med vårt resande för att minska våra utsläpp och bidra till en hållbar utveckling för samhället.
+                    Har man mindre än 5 km till jobbet eller skolan så kan man välja att gå, cykla eller ta bussen.
+                    Att välja att gå eller cykla tar lite plats jämfört med en bil, samt att det sliter mindre på vägarna i det långa loppet.
+                    Det bidrar då till att mindre underhåll av vägar behöver utföras.
+                    Om det är en vanlig ledbuss för stadstrafik man åker med så kan den ta upp emot 40 passagerare.
+                    En enda buss i det fallet kan då ersätta ungefär 26 bilar på vägarna.
+                    Då kan tid och pengar läggas på att istället utveckla vägnätet.
+                    För hushållet innebär det oftast också en lägre kostnad.
+                    I det långa loppet så mår människor och djur bättre då mängden buller minskar kraftigt</p>
+                <p>Vid resor som är mer är 5 km kan det fortfarande gå bra för den som är van vid att cykla att fortsätta göra det.
+                    Om bussförbindelsen är bra så är det självklart också ett bra alternativ.
+                    Vill man däremot spara lite tid så kan man välja att att bilen vid denna reslängd.
+                    Även om det låter lite motsägelsefullt till en början så finns det mycket man kan göra för att förbättra hållbarheten och minska utsläppen från biltrafiken.
+                    Man kan börja med en bil som har en låg bränsleförbrukning, en medelstor bil antas släppa ut cirka 2 kg växthusgaser per mil. Det bidrar till att man spara pengar i det långa loppet samt påverkar det inte miljön lika hårt.
+                    Dessutom kan man samåka med flera personer som antingen bor eller jobbar på ungefär samma plats, då blir det snabbt mycket lägre utsläpp och billigare för var person som väljer att samåka.
+                    Dessutom bidrar det till mindre trafik på vägarna, därför minskar också slitaget på asfalten och utsläppet från stillastående trafik vid köer.
                     </p>
             </div>
             <div class="w3-third w3-container">
