--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="W3.css">
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
     <style>html,body,h1,h2,h3,h4,h5,h6 {
             font-family: "Roboto", sans-serif;
         }
@@ -62,7 +64,7 @@
     <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu"
         id="myOverlay"></div>
 
-    <!-- Main content: shift it to the right by 250 pixels when the sidebar is visible -->
+    <!-- Main content: shift it to the right by 200 pixels when the sidebar is visible -->
     <div class="w3-main" style="margin-left:190px">
 
         <div id="summary" class="w3-row w3-padding-64">
