--- a/quiz.html
+++ b/quiz.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projekt</title>
     <link rel="stylesheet" href="W3.css">
-    <link rel="stylesheet" href="master.css">
     <script src="code.js" defer></script>
 
     <link rel="stylesheet" href="fonts.css">
@@ -42,11 +41,15 @@
     </header>
 
     <!-- Quiz Content-->
+
+
+
+    
     <div class="w3-main">
         <div class="w3-row ">
             <div class="w3-twothird w3-container">
                 <h1 class="w3-text">Quiz</h1>
-                <h2 class="w3-text-teal">Energi i hemmet</h2>
+                <h2 class="w3-text-teal 4">Energi i hemmet</h2>
                 <h3>1. Hur många procent står bostäder av den totala elanvändning i Sverige?</h3>
                 <input type="radio" id="a1" name="answer1" value="a1">
                 <label for="a">39%</label> <br>
