--- a/quiz.html
+++ b/quiz.html
@@ -50,8 +50,8 @@
             <div class="w3-twothird w3-container">
                 <h1 class="w3-text">Quiz</h1>
                 <h2 class="w3-text-teal">Energi i hemmet</h2>
-                <div id="0"
-                    <h3>1. Hur många procent står bostäder av den totala elanvändning i Sverige?</h3>
+                <div id="0">
+                    <h3> 1. Hur många procent står bostäder av den totala elanvändning i Sverige?</h3>
                     <input type="radio" id="a1" name="answer1" value="a1">
                     <label for="a">39%</label> <br>
                     <input type="radio" id="b1" name="answer1" value="b1">
