--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="W3.css">
     <link rel="stylesheet" href="fonts.css">
-    <!-- <link rel="stylesheet" href="font-awesome.min.css"> --><!-- not used anymore--> --> 
+    <!-- <link rel="stylesheet" href="font-awesome.min.css"> --><!-- not used anymore-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
     <style>html,body,h1,h2,h3,h4,h5,h6 {
