--- a/index.html
+++ b/index.html
@@ -91,21 +91,26 @@
             <div class="w3-twothird w3-container">
                 <h1  class="w3-text-teal">Energianvändning hemma</h1>
                 <p>Den totala energiförbrukningen i hela Sverige består till största del av hushållet och servicen. 
-                Därför om klimatpåverkan ska kunna minska kräver det både tekniska förändringar samt allmänhetens uppförande. 
-                I bilden kan man tydligt se andelen av den totala energin som förbrukas inom bostäder, industri och transporter. 
-                Bostäder, lokaler och övrig service motsvara 39% och cirka 60% av detta används för uppvärmning samt varmvatten. 
-                Vilket betyder att 40% står för elen i hemmet.
-                Samhällets energiförbrukning räkna med att fortsätta öka och eftersom all elförbrukning på något sätt orsakar till 
-                den globala uppvärmningen bör vi tänka ur en hållbar elanvändning som utgår ifrån förnybar energi. Exempelvis vattenkraft, 
-                vindkraft och solenergi. Förnybar energi är sådan innebär att det förnyas hela tiden, jämfört med icke förnybara energi som '
-                inte kan förnyas eller ske i en mycket lång tidsperiod.
-                Men hur kan vi som privatperson göra för att minska klimatpåverkan?
-                  Se till att stänga av elektroniken som inte används, t.ex släck lampor när du går därifrån. Byt ut ljuskällan som 
-                  drar mycket el. Avstå från standby läget. Standby läget är när en apparat som antingen är på eller avstäng, vilket fortfarande drar 
-                  strömmen i onödan. T.ex en avstängd dator, men displayen är fortfarande igång för att dator är inkopplade. Därför att det viktig att kopplar 
-                  ur strömsladden. Tar en kortare dusch, sänka värme i elementet och cyklar istället för att tar bilen
-
+                Därför om klimatpåverkan ska kunna minska kräver det både tekniska förändringar samt allmänhetens uppförande.</p>
+                <p>
+                    I bilden kan man tydligt se andelen av den totala energin som förbrukas inom bostäder, industri och transporter. 
+                    Bostäder, lokaler och övrig service motsvara 39% och cirka 60% av detta används för uppvärmning samt varmvatten. 
+                    Vilket betyder att 40% står för elen i hemmet.
                 </p>
+                <p>
+                    Samhällets energiförbrukning räkna med att fortsätta öka och eftersom all elförbrukning på något sätt orsakar till 
+                    den globala uppvärmningen bör vi tänka ur en hållbar elanvändning som utgår ifrån förnybar energi. Exempelvis vattenkraft, 
+                    vindkraft och solenergi. Förnybar energi är sådan innebär att det förnyas hela tiden, jämfört med icke förnybara energi som '
+                    inte kan förnyas eller ske i en mycket lång tidsperiod.
+                </p>
+                <p>
+                    Men hur kan vi som privatperson göra för att minska klimatpåverkan?
+                    Se till att stänga av elektroniken som inte används, t.ex släck lampor när du går därifrån. Byt ut ljuskällan som 
+                    drar mycket el. Avstå från standby läget. Standby läget är när en apparat som antingen är på eller avstäng, vilket fortfarande drar 
+                    strömmen i onödan. T.ex en avstängd dator, men displayen är fortfarande igång för att dator är inkopplade. Därför att det viktig att kopplar 
+                    ur strömsladden. Tar en kortare dusch, sänka värme i elementet och cyklar istället för att tar bilen
+                </p>
+            
             </div>
             <div class="w3-third w3-container">
                 <p class=" w3-padding-large w3-padding-32 w3-center">
